# test-package

./: .gitignore  Dockerfile  README.md  pyproject.toml
scripts/: call_some_f.py  call_sub_1.py  call_sub_2.py
sub_pack_1/: __init__.py  f.py
sub_pack_2/: __init__.py  f.py
